# dooti

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.rst  HISTORY.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  deploy-docs-action.yml  deploy-package-action.yml  docs-action.yml  get-changed-files.yml  package-action.yml  pr.yml  pre-commit-action.yml  tag.yml  test-action.yml
changelog/: 1.fixed.md
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  usage.rst
dooti/: __init__.py  cli.py  dooti.py
src/dooti/: __init__.py  cli.py  dooti.py
tests/: helpers.py
tests/functional/: test_dooti.py
